[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/gui/theme_standard.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/ActorStatusPanel.gd" type="Script" id=2]
[ext_resource path="res://assets/graphics/ui/staminabar_fill_front.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/ui/staminabar_background.png" type="Texture" id=4]

[node name="ActorStatusPanel" type="HBoxContainer"]
margin_top = 26.0
margin_right = 67.0
margin_bottom = 62.0
mouse_filter = 2
size_flags_horizontal = 0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitButton" type="Button" parent="."]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 38.0
margin_right = 78.0
margin_bottom = 36.0

[node name="Name" type="Label" parent="VBoxContainer"]
margin_right = 40.0
margin_bottom = 8.0
size_flags_vertical = 0
text = "Test"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 10.0
margin_right = 40.0
margin_bottom = 18.0

[node name="Stamina" type="TextureProgress" parent="VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 8.0
max_value = 20.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="StaminaNumber" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 26.0
margin_right = 40.0
margin_bottom = 8.0
text = "20"
[connection signal="pressed" from="PortraitButton" to="." method="_on_PortraitButton_pressed"]
